@@ -1,3 +1,13 @@
+2012-11-29  Anders Carlsson  <andersca@apple.com>
+
+        Initialize m_xpcConnection to null if the identifier doesn't have an XPC connection
+        https://bugs.webkit.org/show_bug.cgi?id=103689
+
+        Reviewed by Darin Adler.
+
+        * Platform/CoreIPC/mac/ConnectionMac.cpp:
+        (CoreIPC::Connection::platformInitialize):
+
 2012-11-29  Christophe Dumez  <christophe.dumez@intel.com>
 
         [CoordinatedGraphics] Use OwnPtr for LayerMap's layers in LayerTreeRenderer
